force-app/main/default/objects/Quote_Number_Series__c/Quote_Number_Series__c.object-meta.xml
<CustomObject>
    <label>Quote Number Series</label>
    <nameField>
        <label>Quote Number Series Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Number Series</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>