force-app/main/default/objects/Quote_Number_Series__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>Quote Number Series</relationshipLabel>
    <relationshipName>Quote_Number_Series</relationshipName>
    <type>Lookup</type>
</CustomField>