force-app/main/default/objects/Quote_Number_Series__c/fields/Last_Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Number__c</fullName>
    <label>Last Quote Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>