force-app/main/default/objects/Quote_Number_Series__c/fields/Short_Code__c.field-meta.xml
<CustomField>
    <fullName>Short_Code__c</fullName>
    <formula>Branch__r.Short_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Short Code</label>
    <type>Text</type>
</CustomField>